<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <POU Name="FB_MruInterface" Id="{c6b5539c-66b4-48be-8e8d-e330098c72f8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MruInterface
VAR_INPUT
END_VAR
VAR_OUTPUT
	feedback : ST_MruFeedback;
END_VAR
VAR
	// Udp related
	{attribute 'tc_no_symbol'}
	udpServer : FB_UdpServer(0, 0, 0, 0, 0); // Dummy constructor
	{attribute 'tc_no_symbol'}
	rxUdpBE : ST_RxUdpMru;
	rxUdp : ST_RxUdpMru;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Update udpServer
udpServer();

// Swap byte order on all float variables
rxUdp := BigToLittleEndian(rxUdpBE);

// ### Feedback ###
// E-Motion Body fixed positions
feedback.eta[0] := rxUdp.PosCg_F;
feedback.eta[1] := rxUdp.PosCg_S;
feedback.eta[2] := rxUdp.PosCg_D;
feedback.eta[3] := rxUdp.Roll;
feedback.eta[4] := rxUdp.Pitch;
feedback.eta[5] := rxUdp.Yaw;

// E-Motion Body fixed velocites
feedback.v[0] := rxUdp.VelCg_F;
feedback.v[1] := rxUdp.VelCg_S;
feedback.v[2] := rxUdp.VelCg_D;
feedback.v[3] := rxUdp.AngRate_R;
feedback.v[4] := rxUdp.AngRate_P;
feedback.v[5] := rxUdp.AngRate_Y;]]></ST>
    </Implementation>
    <Method Name="BigToLittleEndian" Id="{55be5d21-786e-44c3-a382-2ff80affc77c}">
      <Declaration><![CDATA[METHOD BigToLittleEndian : ST_RxUdpMru 
VAR_INPUT
	rxUdpBE : ST_RxUdpMru;
END_VAR
VAR
	nData : UINT;
	n : UINT;
	pOffset : UINT;
	bytesBE : ARRAY [0..3] OF BYTE;
	bytesLE : ARRAY [0..3] OF BYTE;
	
	rxUdpLE : ST_RxUdpMru;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// NOTE: Only works with ST_RxMru struct!!! Not a genral function

nData := SIZEOF(rxUdpBE);

FOR n := 0 TO (nData/4 - 2) DO
	// Current pointer offset index
	pOffset := 3 + 4*n;

	IF pOffset <= nData THEN
		MEMCPY(ADR(bytesBE), ADR(rxUdpBE) + pOffset, 4);
	
		// Swap bytes from BE -> LE
		bytesLE[3] := bytesBE[0];
		bytesLE[2] := bytesBE[1];
		bytesLE[1] := bytesBE[2];
		bytesLE[0] := bytesBE[3];
		
		MEMCPY(ADR(rxUdpLE) + pOffset, ADR(bytesLE), 4);
	END_IF
END_FOR

BigToLittleEndian := rxUdpLE;]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_exit" Id="{a3e9d2a2-7999-4f51-bfdc-9869126d272a}">
      <Declaration><![CDATA[METHOD FB_exit : BOOL
VAR_INPUT
	bInCopyCode : BOOL; // if TRUE, the exit method is called for exiting an instance that is copied afterwards (online change).
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_init" Id="{3130c499-1695-4075-b5a0-733165c80fd1}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	
	// Init variables
	localPort : UINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Initilize the udpServer
udpServer.FB_init(
	bInitRetains,
	bInCopyCode,
	localPort,
	SIZEOF(rxUdpBE),
	ADR(rxUdpBE),
	0,
	0
);]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_reinit" Id="{1faf6911-8283-46ae-9bd2-81f20ae258ae}">
      <Declaration><![CDATA[METHOD FB_reinit : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_MruInterface">
      <LineId Id="18" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="110" Count="1" />
      <LineId Id="79" Count="0" />
      <LineId Id="136" Count="1" />
      <LineId Id="135" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="112" Count="2" />
      <LineId Id="108" Count="0" />
      <LineId Id="138" Count="1" />
      <LineId Id="81" Count="0" />
    </LineIds>
    <LineIds Name="FB_MruInterface.BigToLittleEndian">
      <LineId Id="8" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="40" Count="0" />
      <LineId Id="43" Count="1" />
      <LineId Id="69" Count="0" />
      <LineId Id="45" Count="4" />
      <LineId Id="41" Count="1" />
      <LineId Id="16" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="72" Count="0" />
    </LineIds>
    <LineIds Name="FB_MruInterface.FB_exit">
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="FB_MruInterface.FB_init">
      <LineId Id="7" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="14" Count="5" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="FB_MruInterface.FB_reinit">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>